--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "giant-cat-army-riddle",
+  "homepage": "http://belbiy.github.io/giant-cat-army-riddle",
   "author": "Eugene Bannykh",
   "license": "MIT",
   "version": "0.9.0",
@@ -18,6 +19,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
