--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,10 @@
   "name": "Giant cat army riddle",
   "icons": [
     {
+      "src": "icon-512x512.png",
+      "sizes": "512x512"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
